--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@picovoice/porcupine-react-native": "^1.9.9",
+    "@picovoice/react-native-voice-processor": "^1.0.4",
+    "@picovoice/rhino-react-native": "^1.6.9",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
