--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@picovoice/rhino-react-native": "^1.6.9",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-voice/voice": "^3.2.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@testing-library/react-native": "^8.0.0",
