--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5",
+    "react-native-wheel-picker-android": "^2.0.6",
     "recoil": "^0.5.2",
     "speech": "^0.2.1"
   },
