--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'mysouschefnative' do
 
   pod 'react-native-voice', :path => '../node_modules/@react-native-voice/voice'
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'mysouschefnativeTests' do
     inherit! :complete
     # Pods for testing
