--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5",
+    "react-native-bouncy-checkbox": "^1.0.0",
     "react-native-wheel-picker-android": "^2.0.6",
     "recoil": "^0.5.2",
     "recoil-outside": "^0.1.1",
