Fix: double command problem solved

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+MYAPP_RELEASE_STORE_FILE=mysouschef-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=mysouschef
+MYAPP_RELEASE_STORE_PASSWORD=mysouschef
+MYAPP_RELEASE_KEY_PASSWORD=mysouschef
