--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.66.3",
+    "react-native-bouncy-checkbox": "^1.0.0",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
     "react-native-reanimated": "^2.2.4",
@@ -34,7 +37,6 @@
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5",
-    "react-native-bouncy-checkbox": "^1.0.0",
     "react-native-wheel-picker-android": "^2.0.6",
     "recoil": "^0.5.2",
     "recoil-outside": "^0.1.1",
