Fix: application naming@

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,11 +131,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.mysouschefnative"
+        applicationId "com.mysouschef"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 4
-        versionName "1.0.1"
+        versionCode 5
+        versionName "1.1.0"
     }
     splits {
         abi {
