--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'mysouschefnative' do
+target 'mysouschef' do
   config = use_native_modules!
 
   use_react_native!(
@@ -18,7 +18,7 @@ target 'mysouschefnative' do
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
 
-  target 'mysouschefnativeTests' do
+  target 'mysouschefTests' do
     inherit! :complete
     # Pods for testing
   end
