--- a/ios/mysouschefnative.xcodeproj/xcshareddata/xcschemes/mysouschefnative.xcscheme
+++ b/ios/mysouschefnative.xcodeproj/xcshareddata/xcschemes/mysouschefnative.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "mysouschefnative.app"
-               BlueprintName = "mysouschefnative"
-               ReferencedContainer = "container:mysouschefnative.xcodeproj">
+               BuildableName = "mysouschef.app"
+               BlueprintName = "mysouschef"
+               ReferencedContainer = "container:mysouschef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "mysouschefnativeTests.xctest"
-               BlueprintName = "mysouschefnativeTests"
-               ReferencedContainer = "container:mysouschefnative.xcodeproj">
+               BuildableName = "mysouschefTests.xctest"
+               BlueprintName = "mysouschefTests"
+               ReferencedContainer = "container:mysouschef.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "mysouschefnative.app"
-            BlueprintName = "mysouschefnative"
-            ReferencedContainer = "container:mysouschefnative.xcodeproj">
+            BuildableName = "mysouschef.app"
+            BlueprintName = "mysouschef"
+            ReferencedContainer = "container:mysouschef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "mysouschefnative.app"
-            BlueprintName = "mysouschefnative"
-            ReferencedContainer = "container:mysouschefnative.xcodeproj">
+            BuildableName = "mysouschef.app"
+            BlueprintName = "mysouschef"
+            ReferencedContainer = "container:mysouschef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
